--- a/Python/Python_basics.ipynb
+++ b/Python/Python_basics.ipynb
@@ -588,17 +588,157 @@
    "execution_count": 60
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### set",
+   "id": "6f7c664f1355ac6b"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-04T12:59:47.227682Z",
-     "start_time": "2025-08-04T12:59:47.221997Z"
+     "end_time": "2025-08-05T17:59:33.639415Z",
+     "start_time": "2025-08-05T17:59:33.636089Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "8d2ddf0813e4959e",
+   "source": [
+    "A = {1, 2, 3, 4, 5}\n",
+    "B = {4, 5, 6, 7, 8}\n",
+    "\n",
+    "# Union: All elements from both sets\n",
+    "# Use the | operator or the union() method\n",
+    "union_set = A | B\n",
+    "print(\"Union of A and B:\", union_set)\n",
+    "\n",
+    "# Intersection: Elements that are common to both sets\n",
+    "# Use the & operator or the intersection() method\n",
+    "intersection_set = A & B\n",
+    "print(\"Intersection of A and B:\", intersection_set)\n",
+    "\n",
+    "# Difference: Elements in A that are not in B\n",
+    "# Use the - operator or the difference() method\n",
+    "difference_set = A - B\n",
+    "print(\"Difference (A - B):\", difference_set)\n",
+    "\n",
+    "# Symmetric Difference: Elements in either A or B, but not both\n",
+    "# Use the ^ operator or the symmetric_difference() method\n",
+    "symmetric_difference_set = A ^ B\n",
+    "print(\"Symmetric Difference:\", symmetric_difference_set)"
+   ],
+   "id": "8a6ed845c315ac22",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Union of A and B: {1, 2, 3, 4, 5, 6, 7, 8}\n",
+      "Intersection of A and B: {4, 5}\n",
+      "Difference (A - B): {1, 2, 3}\n",
+      "Symmetric Difference: {1, 2, 3, 6, 7, 8}\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Dictionary",
+   "id": "f6256de1badcbb57"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T17:55:11.230207Z",
+     "start_time": "2025-08-05T17:55:11.227355Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "job_profile = { 'name' : 'dhrumil','age' : 25,'role' : 'Data Scientist'}\n",
+    "print(job_profile['name'])\n",
+    "print(job_profile.keys())\n",
+    "print(job_profile.values())\n",
+    "print(job_profile.items())\n",
+    "print(job_profile.get('name'))\n",
+    "print(job_profile)\n",
+    "print(job_profile.items())"
+   ],
+   "id": "a7238adf64974ee9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dhrumil\n",
+      "dict_keys(['name', 'age', 'role'])\n",
+      "dict_values(['dhrumil', 25, 'Data Scientist'])\n",
+      "dict_items([('name', 'dhrumil'), ('age', 25), ('role', 'Data Scientist')])\n",
+      "dhrumil\n",
+      "{'name': 'dhrumil', 'age': 25, 'role': 'Data Scientist'}\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T18:11:37.594197Z",
+     "start_time": "2025-08-05T18:11:37.591326Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "profile2 = dict(zip(['name','age','magic_power'],['ram',32, True]))\n",
+    "print(profile2)"
+   ],
+   "id": "121a03d1596f3611",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'ram', 'age': 32, 'magic_power': True}\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-05T18:15:07.644069Z",
+     "start_time": "2025-08-05T18:15:07.641460Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "profile2['name'] = 'krishna'\n",
+    "print(profile2)\n",
+    "profile2.update(job_profile)\n",
+    "print(profile2)"
+   ],
+   "id": "d7ca9fad6a2d67c3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'krishna', 'age': 32, 'magic_power': True}\n",
+      "{'name': 'dhrumil', 'age': 25, 'magic_power': True, 'role': 'Data Scientist'}\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "99cb4883aa97ea3d"
   }
  ],
  "metadata": {
